# Document_QnA_App

./: README.md  app.py  docker-compose.yml  document_qna_app.txt  pyproject.toml
