[project]
name = "document-qna-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8.0",
    "fastapi>=0.110.0",
    "groq>=0.37.1",
    "langchain>=1.3.9",
    "langchain-classic>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-groq>=0.1.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=0.2.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "streamlit>=1.58.0",
    "uvicorn>=0.28.0",
]
